# zero2prod

./: Cargo.toml  configuration.yml  requests.yml
.github/workflows/: audit.yml  general.yml
migrations/: 20231219072459_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subscriptions.rs
